--- a/public/static/frontend/desktop/css/page/Home.less
+++ b/public/static/frontend/desktop/css/page/Home.less
@@ -24,10 +24,12 @@
         .des h3 {
             font-size: 24px;
             font-weight: 600;
+            color: @baseColors;
         }
         .des p {
             margin: 20px 0;
             font-size: 18px;
+            color: @baseColor;
         }
         .des span {
             display: inline-block;
