--- a/public/static/frontend/desktop/css/page/Home.css
+++ b/public/static/frontend/desktop/css/page/Home.css
@@ -21,10 +21,12 @@
 .banner .swiper-wrapper .swiper-slide .des h3 {
   font-size: 24px;
   font-weight: 600;
+  color: #333;
 }
 .banner .swiper-wrapper .swiper-slide .des p {
   margin: 20px 0;
   font-size: 18px;
+  color: #333;
 }
 .banner .swiper-wrapper .swiper-slide .des span {
   display: inline-block;
