--- a/app/frontend/view/mobile/product/detail.html
+++ b/app/frontend/view/mobile/product/detail.html
@@ -40,11 +40,12 @@
     </div>-->
 
     <div class="product-nav">
+        <h3>{$data.title}</h3>
         <div class="sub_nav">
             <span class="active">Overview</span>
             <span>Specs</span>
-            <span><a href="#">Amazon</a></span>
-            <span><a href="#">Newegg</a></span>
+<!--            <span><a href="#">Amazon</a></span>-->
+<!--            <span><a href="#">Newegg</a></span>-->
         </div>
     </div>
 
