--- a/public/static/frontend/desktop/css/page/Home.less
+++ b/public/static/frontend/desktop/css/page/Home.less
@@ -24,7 +24,7 @@
         .des h3 {
             font-size: 24px;
             font-weight: 600;
-            color: @baseColors;
+            color: @baseColor;
         }
         .des p {
             margin: 20px 0;
