--- a/app/frontend/view/desktop/common/footer.html
+++ b/app/frontend/view/desktop/common/footer.html
@@ -14,7 +14,7 @@
 
             <div class="community">
                 <div class="des">
-                    <h3>FOLLOW MI</h3>
+                    <h3>FOLLOW ME</h3>
                     <p>We want to hear from you!</p>
                 </div>
                 <div class="ico-box">
