--- a/public/static/frontend/desktop/css/page/Product-detail.css
+++ b/public/static/frontend/desktop/css/page/Product-detail.css
@@ -28,29 +28,23 @@
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
-.product-navbefore,
-.product-nav:after {
-  content: " ";
-  display: table;
-  zoom: 1;
-}
-.product-nav:after {
-  clear: both;
+.product-nav .common-width {
+  display: flex;
+  justify-content: space-between;
 }
 .product-nav h3 {
-  float: left;
+  flex: 1;
   margin: 0;
   line-height: 60px;
   color: #333;
   font-size: 24px;
 }
 .product-nav .sub_nav {
-  float: right;
+  display: flex;
   height: 100%;
   overflow: hidden;
 }
 .product-nav .sub_nav span {
-  float: left;
   display: block;
   height: 100%;
   line-height: 60px;
@@ -88,7 +82,6 @@
     height: auto;
   }
   .product-nav h3 {
-    display: none;
     font-size: 20px;
   }
   .product-nav .sub_nav span {
@@ -101,7 +94,6 @@
     height: auto;
   }
   .product-nav h3 {
-    display: none;
     font-size: 20px;
   }
   .product-nav .sub_nav span {
