--- a/public/static/frontend/mobile/css/page/Product-detail.css
+++ b/public/static/frontend/mobile/css/page/Product-detail.css
@@ -40,16 +40,23 @@
 }
 /* 產品導航 */
 .product-nav {
-  padding: 0 10px;
-  height: 60px;
   overflow: hidden;
   background: #fff;
   border-top: 1px solid #eaeaea;
   border-bottom: 1px solid #eaeaea;
 }
+.product-nav h3 {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  padding: 15px 10px;
+  font-size: 16px;
+  font-weight: 700;
+  border-bottom: 1px solid #eaeaea;
+}
 .product-nav .sub_nav {
   width: 100%;
-  height: 100%;
+  padding: 15px 10px;
   display: inline;
   white-space: nowrap;
   overflow-x: scroll;
@@ -58,15 +65,10 @@
 }
 .product-nav .sub_nav span {
   display: inline-block;
-  line-height: 60px;
-  margin-right: 10px;
   color: #00A82D;
 }
 .product-nav .sub_nav span:nth-of-type(1) {
-  margin-left: 0;
-}
-.product-nav .sub_nav span:nth-last-of-type(1) {
-  margin-right: 0;
+  margin-right: 10px;
 }
 .product-nav .sub_nav .active {
   color: #888;
