--- a/public/static/frontend/mobile/css/page/Product-detail.less
+++ b/public/static/frontend/mobile/css/page/Product-detail.less
@@ -8,130 +8,148 @@
 @import "../public/variables";
 
 .product-container {
-    .nav-active {
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 9999;
-        width: 100%;
-        background: @whiteColor;
-        box-shadow: 0 5px 5px rgba(0, 0, 0, .1);
-    }
+  .nav-active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    background: @whiteColor;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, .1);
+  }
 }
 
 /* 產品畫廊 */
 .product-gallery {
-    h3 {
-        .text-overflow();
-        padding: 0 10px;
-        line-height: 60px;
-        font-size: 18px;
-        font-weight: 700;
-        background: @whiteColor;
-        border-bottom: 1px solid @borderColor;
+  h3 {
+    .text-overflow();
+    padding: 0 10px;
+    line-height: 60px;
+    font-size: 18px;
+    font-weight: 700;
+    background: @whiteColor;
+    border-bottom: 1px solid @borderColor;
+  }
+
+  .swiper-wrapper .swiper-slide {
+    position: relative;
+
+    img {
+      .img-responsive();
+      .center-block();
     }
-    .swiper-wrapper .swiper-slide {
-        position: relative;
-        img {
-            .img-responsive();
-            .center-block();
-        }
-    }
-    .swiper-pagination-bullet-active {
-        background: @activeColor;
-    }
+  }
+
+  .swiper-pagination-bullet-active {
+    background: @activeColor;
+  }
 }
 
 /* 產品導航 */
 .product-nav {
-    padding: 0 10px;
-    height: 60px;
-    overflow: hidden;
-    background: @whiteColor;
-    border-top: 1px solid @borderColor;
+  overflow: hidden;
+  background: @whiteColor;
+  border-top: 1px solid @borderColor;
+  border-bottom: 1px solid @borderColor;
+
+  h3 {
+    .text-overflow();
+    padding: 15px 10px;
+    font-size: 16px;
+    font-weight: 700;
     border-bottom: 1px solid @borderColor;
-    .sub_nav {
-        width:100%;
-        height: 100%;
-        display: inline;
-        white-space: nowrap;
-        overflow-x:scroll;
-        float:left;
-        overflow-y: hidden;
-        span {
-            display: inline-block;
-            line-height: 60px;
-            margin-right: 10px;
-            color: @activeColor;
-            &:nth-of-type(1) {
-                margin-left: 0;
-            }
-            &:nth-last-of-type(1) {
-                margin-right: 0;
-            }
-        }
-        .active {
-            color: @whiteSmoke;
-        }
-        a {
-            display: block;
-            height: 24px;
-            line-height: 24px;
-            margin: 18px 0;
-            padding: 0 10px;
-            background: @activeColor;
-            color: @whiteColor;
-        }
+  }
+
+  .sub_nav {
+    width: 100%;
+    padding: 15px 10px;
+    display: inline;
+    white-space: nowrap;
+    overflow-x: scroll;
+    float: left;
+    overflow-y: hidden;
+
+    span {
+      display: inline-block;
+      color: @activeColor;
+
+      &:nth-of-type(1) {
+        margin-right: 10px;
+      }
     }
+
+    .active {
+      color: @whiteSmoke;
+    }
+
+    a {
+      display: block;
+      height: 24px;
+      line-height: 24px;
+      margin: 18px 0;
+      padding: 0 10px;
+      background: @activeColor;
+      color: @whiteColor;
+    }
+  }
 }
 
 /* 產品描述 */
 .product-Detail {
-    .img-box img {
-        .center-block();
-        .img-responsive();
+  .img-box img {
+    .center-block();
+    .img-responsive();
+  }
+
+  .des-box {
+    padding: 40px 10px 20px;
+    background: @whiteColor;
+
+    h3 {
+      font-size: 16px;
     }
-    .des-box {
-        padding: 40px 10px 20px;
-        background: @whiteColor;
-        h3 {
-            font-size: 16px;
-        }
-        p {
-            margin-top: 10px;
-            font-size: 14px;
-            color: @whiteSmoke;
-            line-height: 22px;
-        }
+
+    p {
+      margin-top: 10px;
+      font-size: 14px;
+      color: @whiteSmoke;
+      line-height: 22px;
     }
+  }
 }
 
 /* 參數 */
 .product-Specifications {
-    #specification {
-        background: #fff;
-        ul {
-            width: 100%;
-        }
-        ul > li {
-            line-height: 50px;
-            border-bottom: 1px solid #eaeaea;
-        }
-        ul > li > strong {
-            padding: 0 10px;
-            color: #333;
-        }
-        ul > li.li_title > strong {
-            font-weight: 700;
-        }
-        ul > li > div {
-            padding: 0 10px 10px;
-            border-left: 1px solid #eaeaea;
-        }
-        ul > li > div > p {
-            color: #888;
-            font-size: 12px;
-            line-height: 24px;
-        }
+  #specification {
+    background: #fff;
+
+    ul {
+      width: 100%;
     }
+
+    ul > li {
+      line-height: 50px;
+      border-bottom: 1px solid #eaeaea;
+    }
+
+    ul > li > strong {
+      padding: 0 10px;
+      color: #333;
+    }
+
+    ul > li.li_title > strong {
+      font-weight: 700;
+    }
+
+    ul > li > div {
+      padding: 0 10px 10px;
+      border-left: 1px solid #eaeaea;
+    }
+
+    ul > li > div > p {
+      color: #888;
+      font-size: 12px;
+      line-height: 24px;
+    }
+  }
 }
