页脚链接处理

--- a/app/frontend/view/desktop/common/base.html
+++ b/app/frontend/view/desktop/common/base.html
@@ -37,10 +37,10 @@
     <div class="g-top" id="g-top" title="Go Top"><span class="iconfont iconyooxi"></span></div>
     <div class="community">
         <ul>
-            <li><a href="#" title="Facebook"><span class="iconfont iconicon-test1"></span></a></li>
-            <li><a href="#" title="Twitter"><span class="iconfont iconicon-test2"></span></a></li>
-            <li><a href="#" title="YouTube"><span class="iconfont iconyoutube"></span></a></li>
-            <li><a href="#" title="Instagram"><span class="iconfont iconinstagram"></span></a></li>
+            <li><a target="_blank" title="Facebook" href="#"><span class="iconfont iconicon-test1"></span></a></li>
+            <li><a target="_blank" title="YouTube" href="https://www.youtube.com/channel/UC6fIQCkXBpVyH26fImEQCCA/"><span class="iconfont iconyoutube"></span></a></li>
+            <li><a target="_blank" title="Instagram" href="https://www.instagram.com/minthouz/"><span class="iconfont iconinstagram"></span></a></li>
+            <li><a target="_blank" title="Twitter" href="https://twitter.com/minthouz"><span class="iconfont iconicon-test2"></span></a></li>
         </ul>
     </div>
 </div>
