--- a/app/frontend/view/desktop/common/footer.html
+++ b/app/frontend/view/desktop/common/footer.html
@@ -18,10 +18,10 @@
                     <p>We want to hear from you!</p>
                 </div>
                 <div class="ico-box">
-                    <a href="#"><span class="iconfont iconicon-test1"></span></a>
-                    <a href="https://www.youtube.com/channel/UC6fIQCkXBpVyH26fImEQCCA/"><span class="iconfont iconyoutube"></span></a>
-                    <a href="https://www.instagram.com/minthouz/"><span class="iconfont iconinstagram"></span></a>
-                    <a href="https://twitter.com/minthouz"><span class="iconfont iconicon-test2"></span></a>
+                    <a target="_blank" href="#"><span class="iconfont iconicon-test1"></span></a>
+                    <a target="_blank" href="https://www.youtube.com/channel/UC6fIQCkXBpVyH26fImEQCCA/"><span class="iconfont iconyoutube"></span></a>
+                    <a target="_blank" href="https://www.instagram.com/minthouz/"><span class="iconfont iconinstagram"></span></a>
+                    <a target="_blank" href="https://twitter.com/minthouz"><span class="iconfont iconicon-test2"></span></a>
                 </div>
             </div>
         </div>
@@ -38,16 +38,16 @@
                 </dl>
                 <dl>
                     <dt>STORE</dt>
-                    <dd><a href="#">Amazon</a></dd>
-                    <dd><a href="#">Newegg</a></dd>
-                    <dd><a href="#">eBay</a></dd>
+                    <dd><a target="_blank" href="#">Amazon</a></dd>
+                    <dd><a target="_blank" href="#">Newegg</a></dd>
+                    <dd><a target="_blank" href="#">eBay</a></dd>
                 </dl>
                 <dl>
                     <dt>FIND US</dt>
-                    <dd><i class="iconfont iconicon-test1"></i> <a href="#"><span>Facebook</span></a></dd>
-                    <dd><i class="iconfont iconyoutube"></i> <a href="https://www.youtube.com/channel/UC6fIQCkXBpVyH26fImEQCCA/"><span>Youtube</span></a></dd>
-                    <dd><i class="iconfont iconinstagram"></i> <a href="https://www.instagram.com/minthouz/"><span>Instagram</span></a></dd>
-                    <dd><i class="iconfont iconicon-test2"></i> <a href="https://twitter.com/minthouz"><span>Twitter</span></a></dd>
+                    <dd><i class="iconfont iconicon-test1"></i> <a target="_blank" href="#"><span>Facebook</span></a></dd>
+                    <dd><i class="iconfont iconyoutube"></i> <a target="_blank" href="https://www.youtube.com/channel/UC6fIQCkXBpVyH26fImEQCCA/"><span>Youtube</span></a></dd>
+                    <dd><i class="iconfont iconinstagram"></i> <a target="_blank" href="https://www.instagram.com/minthouz/"><span>Instagram</span></a></dd>
+                    <dd><i class="iconfont iconicon-test2"></i> <a target="_blank" href="https://twitter.com/minthouz"><span>Twitter</span></a></dd>
                 </dl>
             </div>
 
