--- a/app/frontend/view/mobile/common/footer.html
+++ b/app/frontend/view/mobile/common/footer.html
@@ -24,8 +24,9 @@
 
         <div class="foot-contact">
             <h3>Contact Us</h3>
-            <p><span>before sales: </span> <a href="mailto:postsales@wavlink.com">postsales@wavlink.com</a></p>
-            <p><span>after sales: </span> <a href="mailto:contact@wavlink.com">contact@wavlink.com</a></p>
+            <p><span>Before Sales: </span> <a href="mailto:postsales@minthouz.com">postsales@minthouz.com</a></p>
+            <p><span>Contact Us: </span> <a href="mailto:contact@minthouz.com">contact@minthouz.com</a></p>
+            <p><span>Marketing: </span> <a href="mailto:marketing@minthouz.com">marketing@minthouz.com</a></p>
         </div>
 
         <div class="contact">
