--- a/app/frontend/view/desktop/common/nav.html
+++ b/app/frontend/view/desktop/common/nav.html
@@ -49,6 +49,7 @@
                     {volist name="treeCategory" id="vo"}
                     <li class="menu-item">
                         <a class="item-link" href="/{$code}/product/index.html">{$vo.name}</a>
+                        {notempty name="vo.products"}
                         <div class="item-children">
                             <ul class="common-width">
                                 {volist name="vo.products" id="lo"}
@@ -61,6 +62,7 @@
                                 {/volist}
                             </ul>
                         </div>
+                        {/notempty}
                     </li>
                     {/volist}
                 </ul>
