--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -372,6 +372,16 @@ body {
   -o-transform: scaleX(0);
   transform: scaleX(0);
 }
+.g-hd .nav .menu-box .menu-list .menu-item-active .item-link {
+  color: #00A82D;
+}
+.g-hd .nav .menu-box .menu-list .menu-item-active .item-link:before {
+  -webkit-transform: scaleX(1);
+  -moz-transform: scaleX(1);
+  -ms-transform: scaleX(1);
+  -o-transform: scaleX(1);
+  transform: scaleX(1);
+}
 .g-hd .nav .item-children {
   display: none;
   position: absolute;
