--- a/public/static/frontend/desktop/css/page/Product-list.css
+++ b/public/static/frontend/desktop/css/page/Product-list.css
@@ -10,6 +10,11 @@
 section {
   padding-top: 100px;
 }
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  section {
+    padding-top: 0;
+  }
+}
 .product-container {
   padding: 0 0 100px;
   background: #fff;
