--- a/public/static/frontend/desktop/css/page/Product-list.less
+++ b/public/static/frontend/desktop/css/page/Product-list.less
@@ -13,6 +13,9 @@
 
 section {
     padding-top: 100px;
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+        padding-top: 0;
+    }
 }
 
 .product-container {
