--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -152,6 +152,7 @@ html {
 }
 a {
   color: #25a4bb;
+  word-break: break-all;
 }
 @font-face {
   font-family: Neo_Sans;
@@ -177,9 +178,16 @@ body {
 .common-width:after {
   clear: both;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .common-width {
     width: 100%;
+    padding: 0 10px;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .common-width {
+    width: 100%;
+    padding: 0 10px;
   }
 }
 .g-notice {
@@ -451,12 +459,8 @@ body {
   line-height: 50px;
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
-  .g-hd .hd {
-    padding: 0 10px;
-  }
   .g-hd .nav {
     position: static;
-    padding: 0 10px;
     background: #fff;
   }
   .g-hd .nav .logo a {
@@ -492,12 +496,6 @@ body {
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
-  .g-hd .hd {
-    padding: 0 15px;
-  }
-  .g-hd .nav {
-    padding: 0 15px;
-  }
   .g-hd .nav .menu-box .menu-list .menu-item {
     padding: 20px 10px;
   }
@@ -694,7 +692,7 @@ body {
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .g-foot .about {
-    padding: 40px 10px;
+    padding: 40px 0;
     background: #f5f5f5;
   }
   .g-foot .aboutbefore,
@@ -734,7 +732,7 @@ body {
     margin-top: 26px;
   }
   .g-foot .foot {
-    padding: 100px 10px;
+    padding: 100px 0;
   }
   .g-foot .copyright {
     font-size: 12px;
@@ -742,7 +740,7 @@ body {
 }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
   .g-foot .about {
-    padding: 40px 15px;
+    padding: 40px 0;
     background: #f5f5f5;
   }
   .g-foot .aboutbefore,
@@ -782,7 +780,7 @@ body {
     margin-top: 26px;
   }
   .g-foot .foot {
-    padding: 100px 15px;
+    padding: 100px 0;
   }
 }
 .g-path {
