--- a/public/static/frontend/mobile/css/page/About.less
+++ b/public/static/frontend/mobile/css/page/About.less
@@ -16,24 +16,18 @@ section {
     border-bottom: 1px solid @borderColor;
     ul {
       .clearFix();
+      border-left: 1px solid @borderColor;
     }
     .menu-item {
       .fl();
       .text-overflow();
       width: 50%;
-      line-height: 30px;
+      padding: 8px 4px;
       border-top: 1px solid @borderColor;
-      &:nth-of-type(1),
-      &:nth-of-type(2) {
-        border-top: transparent;
-      }
-      &:nth-of-type(2n + 1) {
-        padding-right: 5px;
-        border-right: 1px solid @borderColor;
-      }
-      &:nth-of-type(2n + 2) {
-        padding-left: 5px;
-        border-left: 1px solid transparent;
+      border-right: 1px solid @borderColor;
+      &:nth-last-of-type(1),
+      &:nth-last-of-type(2) {
+        border-bottom: 1px solid @borderColor;
       }
     }
     .menu-item a {
