--- a/public/static/frontend/mobile/css/public/components.less
+++ b/public/static/frontend/mobile/css/public/components.less
@@ -85,6 +85,7 @@ html {
 }
 a {
     color: #25a4bb;
+    word-break: break-all;
 }
 textarea,
 input[type="text"],
@@ -105,7 +106,6 @@ body {
     transition: all .3S;
     font-size: 14px;
     color: #333;
-    //padding-top: 60px;
 }
 
 //重大通知
