--- a/public/static/frontend/mobile/css/page/About.css
+++ b/public/static/frontend/mobile/css/page/About.css
@@ -21,9 +21,6 @@ section .About-menu:after {
 section .About-menu:after {
   clear: both;
 }
-section .About-menu ul {
-  border-left: 1px solid #eaeaea;
-}
 section .About-menu ulbefore,
 section .About-menu ul:after {
   content: " ";
@@ -40,12 +37,17 @@ section .About-menu .menu-item {
   overflow: hidden;
   width: 50%;
   padding: 8px 4px;
-  border-top: 1px solid #eaeaea;
   border-right: 1px solid #eaeaea;
-}
-section .About-menu .menu-item:nth-last-of-type(1),
-section .About-menu .menu-item:nth-last-of-type(2) {
   border-bottom: 1px solid #eaeaea;
+  border-top: 1px solid transparent;
+  border-left: 1px solid transparent;
+}
+section .About-menu .menu-item:nth-of-type(1),
+section .About-menu .menu-item:nth-of-type(2) {
+  border-top: 1px solid #eaeaea;
+}
+section .About-menu .menu-item:nth-of-type(2n + 1) {
+  border-left: 1px solid #eaeaea;
 }
 section .About-menu .menu-item a {
   color: #333;
