--- a/public/static/frontend/mobile/css/page/About.less
+++ b/public/static/frontend/mobile/css/page/About.less
@@ -16,18 +16,22 @@ section {
     border-bottom: 1px solid @borderColor;
     ul {
       .clearFix();
-      border-left: 1px solid @borderColor;
     }
     .menu-item {
       .fl();
       .text-overflow();
       width: 50%;
       padding: 8px 4px;
-      border-top: 1px solid @borderColor;
       border-right: 1px solid @borderColor;
-      &:nth-last-of-type(1),
-      &:nth-last-of-type(2) {
-        border-bottom: 1px solid @borderColor;
+      border-bottom: 1px solid @borderColor;
+      border-top: 1px solid transparent;
+      border-left: 1px solid transparent;
+      &:nth-of-type(1),
+      &:nth-of-type(2) {
+        border-top: 1px solid @borderColor;
+      }
+      &:nth-of-type(2n + 1) {
+        border-left: 1px solid @borderColor;
       }
     }
     .menu-item a {
