--- a/public/static/frontend/desktop/css/page/Product-list.css
+++ b/public/static/frontend/desktop/css/page/Product-list.css
@@ -106,4 +106,10 @@ section {
   margin: 20px 0;
   color: #333;
 }
+.product-list .product-empty {
+  padding: 20px 0;
+  text-align: center;
+  border: 1px solid #eaeaea;
+  border-radius: 5px;
+}
 /*# sourceMappingURL=Product-list.css.map */
