--- a/public/static/frontend/desktop/css/page/Product-list.less
+++ b/public/static/frontend/desktop/css/page/Product-list.less
@@ -8,87 +8,104 @@
 @import "../public/variables";
 
 .g-hd .nav {
-    background: @whiteColor;
+  background: @whiteColor;
 }
 
 section {
-    padding-top: 100px;
-    @media screen and (min-width: 768px) and (max-width: 991px) {
-        padding-top: 0;
-    }
+  padding-top: 100px;
+  @media screen and (min-width: 768px) and (max-width: 991px) {
+    padding-top: 0;
+  }
 }
 
 .product-container {
-    padding: 0 0 100px;
-    background: @whiteColor;
+  padding: 0 0 100px;
+  background: @whiteColor;
 }
+
 .product-list {
-    .title {
-        padding-top: 20px;
-        h3 {
-            display: inline-block;
-            margin: 15px 0;
-            color: @activeColor;
-            font-size: 18px;
-            line-height: 30px;
-            font-weight: 400;
-            cursor: pointer;
-        }
-        .iconfont {
-            display: inline-block;
-            *zoom: 1;
-            *display: inline;
-            width: 20px;
-            height: 20px;
-            margin-right: 18px;
-            border: 1px solid #b0b0b0;
-            border-radius: 15px;
-            color: #b0b0b0;
-            line-height: 20px;
-            text-align: center
-        }
-        .iconarrow-up {
-            color: @activeColor;
-            border-color: @activeColor;
-        }
+  .title {
+    padding-top: 20px;
+
+    h3 {
+      display: inline-block;
+      margin: 15px 0;
+      color: @activeColor;
+      font-size: 18px;
+      line-height: 30px;
+      font-weight: 400;
+      cursor: pointer;
     }
 
-    .list-box {
-        .clearFix();
-        border-left: 1px solid @borderColor;
-        .list-item {
-            float: left;
-            width: 20%;
-            text-align: center;
-            border: 1px solid @borderColor;
-            border-left: none;
-            border-top: none;
-        }
-        .list-item:nth-of-type(1),
-        .list-item:nth-of-type(2),
-        .list-item:nth-of-type(3),
-        .list-item:nth-of-type(4),
-        .list-item:nth-of-type(5) {
-            border-top: 1px solid @borderColor;
-        }
-        .list-item a {
-            display: block;
-            padding: 30px 15px 0;
-            &:hover p {
-                color: @activeColor;
-            }
-        }
-        .list-item a img {
-            .img-responsive();
-            .center-block();
-        }
-        .list-item a p {
-            .text-overflow-many(100%, 3);
-            #transition(all .2s linear);
-            margin: 20px 0;
-            color: @baseColor;
-        }
+    .iconfont {
+      display: inline-block;
+      *zoom: 1;
+      *display: inline;
+      width: 20px;
+      height: 20px;
+      margin-right: 18px;
+      border: 1px solid #b0b0b0;
+      border-radius: 15px;
+      color: #b0b0b0;
+      line-height: 20px;
+      text-align: center
     }
+
+    .iconarrow-up {
+      color: @activeColor;
+      border-color: @activeColor;
+    }
+  }
+
+  .list-box {
+    .clearFix();
+    border-left: 1px solid @borderColor;
+
+    .list-item {
+      float: left;
+      width: 20%;
+      text-align: center;
+      border: 1px solid @borderColor;
+      border-left: none;
+      border-top: none;
+    }
+
+    .list-item:nth-of-type(1),
+    .list-item:nth-of-type(2),
+    .list-item:nth-of-type(3),
+    .list-item:nth-of-type(4),
+    .list-item:nth-of-type(5) {
+      border-top: 1px solid @borderColor;
+    }
+
+    .list-item a {
+      display: block;
+      padding: 30px 15px 0;
+
+      &:hover p {
+        color: @activeColor;
+      }
+    }
+
+    .list-item a img {
+      .img-responsive();
+      .center-block();
+    }
+
+    .list-item a p {
+      .text-overflow-many(100%, 3);
+      #transition(all .2s linear);
+      margin: 20px 0;
+      color: @baseColor;
+    }
+  }
+
+  .product-empty {
+    padding: 20px 0;
+    text-align: center;
+    border: 1px solid @borderColor;
+    border-radius: 5px;
+  }
 }
 
 
