--- a/app/frontend/view/mobile/product/index.html
+++ b/app/frontend/view/mobile/product/index.html
@@ -20,23 +20,28 @@
 
 <div class="product-container">
     {volist name="data" id="vo"}
-    {notempty name="vo.products"}
     <div class="product-list">
         <div class="title">
             <h3><span class="iconfont iconarrow-down"></span> {$vo.name}</h3>
         </div>
+        {notempty name="vo.products"}
         <div class="list-box">
             {volist name="vo.products" id="lo"}
             <div class="list-item">
-                <a href="/{$code}/product/{$lo.url_title}/detail.html">
+                <a href="/{$code}/product/{$lo.url_title}/detail.html" title="Fan1">
                     <img src="{$lo.thumbnail}" alt="">
                     <p>{$lo.title}</p>
                 </a>
             </div>
             {/volist}
         </div>
+        {/notempty}
+        {empty name="vo.products"}
+        <div class="product-empty list-box">
+            暂无数据
+        </div>
+        {/empty}
     </div>
-    {/notempty}
     {/volist}
 </div>
 {/block}
