--- a/public/static/frontend/mobile/css/page/About.less
+++ b/public/static/frontend/mobile/css/page/About.less
@@ -6,6 +6,7 @@
 */
 @import "../public/mixins";
 @import "../public/variables";
+
 section {
   min-height: 800px;
 
@@ -14,9 +15,11 @@ section {
     padding: 10px;
     background: @whiteColor;
     border-bottom: 1px solid @borderColor;
+
     ul {
       .clearFix();
     }
+
     .menu-item {
       .fl();
       .text-overflow();
@@ -26,22 +29,107 @@ section {
       border-bottom: 1px solid @borderColor;
       border-top: 1px solid transparent;
       border-left: 1px solid transparent;
+
       &:nth-of-type(1),
       &:nth-of-type(2) {
         border-top: 1px solid @borderColor;
       }
+
       &:nth-of-type(2n + 1) {
         border-left: 1px solid @borderColor;
       }
     }
+
     .menu-item a {
       color: #333;
+
       &:hover {
         color: @activeColor;
       }
     }
+
     .active a {
       color: @activeColor;
+    }
+  }
+
+  .About-bg {
+    display: none;
+  }
+
+  .About-content {
+    margin-top: 0;
+    padding: 20px 10px;
+    background: @whiteColor;
+
+    a {
+      word-wrap: break-word;
+    }
+
+    h3 {
+      margin: 20px 0 5px;
+      font-size: 16px;
+    }
+
+    h4 {
+      margin: 20px 0 5px;
+      font-size: 14px;
+    }
+
+    h5 {
+      margin: 10px 0 5px;
+      font-size: 14px;
+    }
+
+    h6 {
+      margin: 10px 0 5px;
+      font-size: 14px;
+    }
+
+    strong {
+      display: block;
+      margin: 15px 0 5px;
+      color: #333;
+      font-size: 12px;
+    }
+
+    p {
+      margin: 5px 0;
+      font-size: 12px;
+      color: @whiteSmoke;
+    }
+
+    span {
+      display: block;
+      font-size: 12px;
+      color: @whiteSmoke;
+    }
+
+    ul {
+      margin: 15px 0 15px 18px;
+    }
+
+    li {
+      margin-top: 5px;
+      color: @whiteSmoke;
+      list-style: disc;
+    }
+
+    li:nth-of-type(1) {
+      margin-top: 0;
+    }
+
+    li span {
+      display: block;
+      margin-top: 10px;
+    }
+
+    li span:nth-of-type(1) {
+      margin-top: 0;
+    }
+
+    table {
+      margin: 14px 0 35px;
     }
   }
 }
