--- a/public/static/frontend/mobile/css/page/Product-list.less
+++ b/public/static/frontend/mobile/css/page/Product-list.less
@@ -8,73 +8,90 @@
 @import "../public/variables";
 
 .product-container {
-    padding: 0 0 100px;
-    background: @whiteColor;
+  padding: 0 0 100px;
+  background: @whiteColor;
 }
+
 .product-list {
-    .title {
-        padding: 20px 10px 0;
-        h3 {
-            display: inline-block;
-            margin: 15px 0;
-            color: @activeColor;
-            font-size: 16px;
-            line-height: 30px;
-            font-weight: 400;
-            cursor: pointer;
-        }
-        .iconfont {
-            display: inline-block;
-            *zoom: 1;
-            *display: inline;
-            width: 20px;
-            height: 20px;
-            margin-right: 15px;
-            border: 1px solid #b0b0b0;
-            border-radius: 15px;
-            color: #b0b0b0;
-            line-height: 20px;
-            text-align: center
-        }
-        .iconarrow-up {
-            color: @activeColor;
-            border-color: @activeColor;
-        }
+  .title {
+    padding: 20px 10px 0;
+
+    h3 {
+      display: inline-block;
+      margin: 15px 0;
+      color: @activeColor;
+      font-size: 16px;
+      line-height: 30px;
+      font-weight: 400;
+      cursor: pointer;
     }
 
-    .list-box {
-        .clearFix();
-        margin: 0 10px;
-        border-left: 1px solid @borderColor;
-        .list-item {
-            float: left;
-            width: 50%;
-            text-align: center;
-            border-bottom: 1px solid @borderColor;
-            border-right: 1px solid @borderColor;
-            &:nth-of-type(1),
-            &:nth-of-type(2) {
-                border-top: 1px solid @borderColor;
-            }
-        }
-        .list-item a {
-            display: block;
-            padding: 30px 15px 0;
-            &:hover p {
-                color: @activeColor;
-            }
-        }
-        .list-item a img {
-            .img-responsive();
-            .center-block();
-        }
-        .list-item a p {
-            .text-overflow-many(100%, 3);
-            margin: 20px 0;
-            color: @baseColor;
-            #transition(all .2s linear);
-        }
+    .iconfont {
+      display: inline-block;
+      *zoom: 1;
+      *display: inline;
+      width: 20px;
+      height: 20px;
+      margin-right: 15px;
+      border: 1px solid #b0b0b0;
+      border-radius: 15px;
+      color: #b0b0b0;
+      line-height: 20px;
+      text-align: center
     }
+
+    .iconarrow-up {
+      color: @activeColor;
+      border-color: @activeColor;
+    }
+  }
+
+  .list-box {
+    .clearFix();
+    margin: 0 10px;
+    border-left: 1px solid @borderColor;
+
+    .list-item {
+      float: left;
+      width: 50%;
+      text-align: center;
+      border-bottom: 1px solid @borderColor;
+      border-right: 1px solid @borderColor;
+
+      &:nth-of-type(1),
+      &:nth-of-type(2) {
+        border-top: 1px solid @borderColor;
+      }
+    }
+
+    .list-item a {
+      display: block;
+      padding: 30px 15px 0;
+
+      &:hover p {
+        color: @activeColor;
+      }
+    }
+
+    .list-item a img {
+      .img-responsive();
+      .center-block();
+    }
+
+    .list-item a p {
+      .text-overflow-many(100%, 3);
+      margin: 20px 0;
+      color: @baseColor;
+      #transition(all .2s linear);
+    }
+  }
+
+  .product-empty {
+    margin: 0 10px;
+    padding: 15px 0;
+    text-align: center;
+    border: 1px solid @borderColor;
+  }
 }
 
 
