--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -220,8 +220,15 @@ body {
     font-size: 12px;
   }
 }
+.g-hd-fixed {
+  position: fixed!important;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+}
 .g-hd {
-  position: relative;
+  width: 100%;
 }
 .g-hd .hd {
   height: 30px;
@@ -269,12 +276,9 @@ body {
   background: #fff !important;
 }
 .g-hd .nav {
-  position: absolute;
-  top: 30px;
-  left: 0;
-  z-index: 9999;
+  position: relative;
   width: 100%;
-  background: transparent;
+  background: #fff;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -ms-transform: all 0.2s linear;
@@ -836,4 +840,3 @@ body {
   color: #fff;
   font-size: 24px;
 }
-/*# sourceMappingURL=components.css.map */
