--- a/public/static/frontend/mobile/css/public/components.less
+++ b/public/static/frontend/mobile/css/public/components.less
@@ -132,37 +132,32 @@ body {
 
 //重大通知
 .g-notice {
-  padding: 20px 10px;
   text-align: center;
-  color: @whiteSmoke;
   font-size: 12px;
 
   .des {
-    display: inline;
-    color: @whiteSmoke;
-    #transition(all .2s linear);
-
-    &:hover {
-      color: @activeColor;
-      text-decoration: underline;
+    padding: 20px 10px;
+    a {
+      color: @whiteSmoke;
+      #transition(all .2s linear);
     }
-  }
 
-  .close {
-    margin-left: 20px;
-    cursor: pointer;
-  }
-
-  @media screen and (min-width: 768px) and (max-width: 991px) {
-    height: 40px;
-    line-height: 40px;
-    font-size: 12px;
+    .close {
+      margin-left: 20px;
+      cursor: pointer;
+    }
   }
 }
 
 //重大通知
 
 //g-hd
+.g-hd-fixed {
+  position: fixed!important;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+}
 .g-hd {
   width: 100%;
   background: @activeColor;
