--- a/app/frontend/view/mobile/product/index.html
+++ b/app/frontend/view/mobile/product/index.html
@@ -38,7 +38,7 @@
         {/notempty}
         {empty name="vo.products"}
         <div class="product-empty list-box">
-            暂无数据
+            Coming Soon
         </div>
         {/empty}
     </div>
