解决当没有顶部通知栏时，导航无法自动固定到顶部的bug

--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -190,8 +190,7 @@ body {
   }
 }
 .g-notice {
-  height: 60px;
-  line-height: 60px;
+  padding: 10px 0;
   text-align: center;
   color: #888;
   font-size: 14px;
@@ -215,8 +214,6 @@ body {
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .g-notice {
-    height: 40px;
-    line-height: 40px;
     font-size: 12px;
   }
 }
