--- a/public/static/frontend/mobile/css/public/components.less
+++ b/public/static/frontend/mobile/css/public/components.less
@@ -136,7 +136,7 @@ body {
   font-size: 12px;
 
   .des {
-    padding: 20px 10px;
+    padding: 10px;
     a {
       color: @whiteSmoke;
       #transition(all .2s linear);
