--- a/app/frontend/view/desktop/common/base.html
+++ b/app/frontend/view/desktop/common/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- 重大通知栏 -->
-{notempty name="notice"}
+{notempty name="notice.notice"}
 <div class="g-notice" id="g-notice">
     <a href="{$notice.path}" class="des">{$notice.notice}</a>
     <span class="close">X</span>
