--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -136,8 +136,7 @@ body {
 
 //重大通知
 .g-notice {
-  height: 60px;
-  line-height: 60px;
+  padding: 10px 0;
   text-align: center;
   color: @whiteSmoke;
   font-size: 14px;
@@ -159,8 +158,6 @@ body {
   }
 
   @media screen and (min-width: 768px) and (max-width: 991px) {
-    height: 40px;
-    line-height: 40px;
     font-size: 12px;
   }
 }
