首页导航显示调整

--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -153,6 +153,8 @@
     });
 
     $(function () {
+        var noticeHeight = $('.g-notice').outerHeight();
+        $('.g-hd').css({'top': noticeHeight});
         $('.play').click(function () {
             var url = $(this).attr('data-url');
             var title = $(this).attr('data-title');
