--- a/public/static/frontend/desktop/css/page/Home.less
+++ b/public/static/frontend/desktop/css/page/Home.less
@@ -7,6 +7,28 @@
 @import "../public/mixins";
 @import "../public/variables";
 
+.g-hd {
+  position: absolute;
+  left: 0;
+  z-index: 99999;
+  box-shadow: none;
+  .nav {
+    background: none;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .g-hd {
+    position: static;
+    .nav {
+      background: @whiteColor;
+    }
+  }
+}
+
+section {
+  padding-top: 0!important;
+}
+
 .banner {
     .swiper-wrapper {
         height: auto;
