--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -218,7 +218,7 @@ body {
   }
 }
 .g-hd-fixed {
-  position: fixed!important;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 9999;
@@ -275,7 +275,6 @@ body {
 .g-hd .nav {
   position: relative;
   width: 100%;
-  background: #fff;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -ms-transform: all 0.2s linear;
