--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -166,7 +166,7 @@ body {
 
 //g-hd
 .g-hd-fixed {
-  position: fixed!important;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 9999;
@@ -231,7 +231,6 @@ body {
     position: relative;
     .clearFix();
     width: 100%;
-    background: #fff;
     #transition(all .2s linear);
 
     .logo {
